feat: add named hasOne relation (#549)

--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,19 @@
 {
     "name": "tempest/view",
+    "description": "A component for view handling.",
     "license": "MIT",
     "minimum-stability": "dev",
     "require": {
         "php": "^8.3",
         "masterminds/html5": "^2.9",
-        "tempest/core": "self.version",
-        "tempest/container": "self.version",
-        "tempest/validation": "self.version"
+        "tempest/core": "dev-main",
+        "tempest/container": "dev-main",
+        "tempest/validation": "dev-main"
     },
     "autoload": {
+        "files": [
+            "src/functions.php"
+        ],
         "psr-4": {
             "Tempest\\View\\": "src"
         }
